# cpsc533v-project

./: README.md
snake_pegboard/: main.py  pyproject.toml
snake_pegboard/snake_env/: __init__.py  snake.py
snake_pegboard/snake_env/assets/: snake.xml
